# Bitovi-blog-agent

./: .gitignore  README.md  chain.py  config.py  ingest.py  main.py  pyproject.toml  requirements.txt
eval/: golden_dataset.json  run_eval.py
frontend/: package-lock.json  package.json  pyproject.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ask/: route.ts
tests/: conftest.py  test_agent.py  test_api.py  test_eval.py  test_ingest.py  test_retriever.py
